--- a/templates/index.html
+++ b/templates/index.html
@@ -7,18 +7,18 @@
     <title>Login</title>
 </head>
 <body>
+      
     <div id="coruja-login"><img id="img-coruja" src="/static/Coruja-login.png" alt="">
     </div>
     <section>
-        <div id="img-login">
-                <img  src="/static/Logo.png" alt="">
-            </div>
+                <img id="img-login"  src="/static/Logo.png" alt="">
             <div class="login-container">
+                <img id="img-login-celular" src="/static/Logo Clique Pedagógico.png" alt="">
                 <h2>Login</h2>
                 <form action="/login" method="POST">
-                    <input type="text" name="username" placeholder="Usuário" required>
+                    <input type="text" name="username" placeholder="Usuário" required >
                     <input type="password" name="password" placeholder="Senha" required>
-                    <button id="Entrar" type="submit">Entrar</button>
+                    <a id="Entrar" href="/login">ENTRAR</a>
                 </form>
             </div>
     </section>
