--- a/static/style.css
+++ b/static/style.css
@@ -21,18 +21,27 @@ section{
     flex-direction: row;
     margin-top: 100px;
     justify-content: space-around;
-    width: 60%;
+    width: 100%;
+    margin: 100px 200px 0px 200px;
     height: 80vh;
-    box-shadow: 0 4px 12px rgb(0, 0, 0);
     border-radius: 10px ;
+    box-shadow: 0 4px 12px rgb(0, 0, 0);
+    background-color: white;
 }
 #img-login{
     display: flex;
+    width: 100%;
+    margin: 30px;
     flex-direction: row;
     align-items: center;
-    border-radius: 10px 0px 0px 10px;
-    background-color: white;
+    height: 90%;
+    width: 50%;
 }
+#img-login-celular{
+    opacity: 0;
+    height: 0%;
+}
+
 .login-container {
     display: flex;
     flex-direction: column;
@@ -47,13 +56,10 @@ form{
     display: flex;
     flex-direction: column;
 }
-img{
-    height: 80%;
-}
 input[type="text"], input[type="password"] {
-    width: 300px;
+    width: 100%;
+    margin: 10px;
     padding: 10px;
-    margin: 10px 0;
     border: 1px solid #ccc;
     border-radius: 4px;
 }
@@ -62,12 +68,15 @@ input[type="text"], input[type="password"] {
     color: white;
     border: none;
     padding: 10px;
-    width: 320px;
+    width: 100%;
+    position: relative;
+    left: 10px;
     border-radius: 4px;
     cursor: pointer;
-    transition: 0.6s;
+    transition: 0.2s;
     font-size: 15px;
     font-weight: 600;
+    text-decoration: none;
 }
 #Entrar:hover {
     transform: scale(0.95);
@@ -79,7 +88,7 @@ input[type="text"], input[type="password"] {
     height: 0%;
     width: 0%;
     top: -22px;
-    left: 400px;
+    left: 300px;
     z-index: 999;
 }
 #img-coruja{
@@ -87,4 +96,56 @@ input[type="text"], input[type="password"] {
 }
 h2{
     color: white;
+}
+@media (max-width: 768px){
+    #img-login{
+        display: none;
+    }
+    #img-coruja{
+    display: none;
+    }
+    section{
+        margin: 0%;
+        width: 100vw;
+        height: 100vh;
+        border-radius: 0px;
+    }
+    .login-container{
+        width: 100%;
+        height: 100%;
+        border-radius: 0px;
+        z-index: 1;
+        background-color: #55177c;
+    }
+    input[type="text"], input[type="password"] {
+        position: relative;
+        right: 10px;
+        top: -60px;
+    }
+    #Entrar{
+        position: relative;
+        left: -1px;
+        top: -60px;
+    }
+    #img-login-celular{
+        height: 30%;
+        opacity: 1;
+        position: relative;
+        z-index: 999;
+        top: -60px;
+    }
+    h2{
+        position: relative;
+        top: -60px
+    };
+   
+}
+@media (width: 2307.210px){
+    section{
+        width: 50%;
+    }
+   #coruja-login{
+    left: 500px;
+}
+    
 }
