Corrigindo btn-entrar

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
                 <form action="/login" method="POST">
                     <input type="text" name="username" placeholder="Usuário" required >
                     <input type="password" name="password" placeholder="Senha" required>
-                    <a id="Entrar" href="/login">ENTRAR</a>
+                    <button id="Entrar">Entrar</button>
                 </form>
             </div>
     </section>
