Pagina de login

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <div id="coruja-login"><img id="img-coruja" src="/static/Coruja-login.png" alt="">
     </div>
     <section>
-                <img id="img-login"  src="/static/Logo.png" alt="">
+                <div id="cont-img" ><img id="img-login"  src="/static/Logo.png" alt=""></div>
             <div class="login-container">
                 <img id="img-login-celular" src="/static/Logo Clique Pedagógico.png" alt="">
                 <h2>Login</h2>
