--- a/static/style.css
+++ b/static/style.css
@@ -105,6 +105,7 @@ h2{
     #img-login{
         display: none;
     }
+
     body{
         background-color:#55177c ;
     }
@@ -149,7 +150,20 @@ h2{
         position: relative;
         top: -60px
     };
-   
+    .input-container {
+    display: none;
+}  
+.input-container input {
+    display: none;
+     /* espaço para o botão */
+}
+.input-container .toggle-password{
+    display: flex;
+    position: static;
+    top: -60px;
+    height: 40px;
+    right: 1000px;
+}
 }
 @media (width: 2307.210px){
     section{
@@ -169,3 +183,26 @@ h2{
 #esc-senha:hover{
     color: #00E280;
 }
+
+/*mostrar senha*/
+
+.input-container {
+    position: relative;
+    width: 100%;
+    top: -27px;
+}
+.input-container input {
+    width: 100%; /* espaço para o botão */
+}
+
+.input-container .toggle-password {
+    position: absolute;
+    right: -30px;
+    transform: translateY(-50%);
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 18px;
+    z-index: 999;
+}
+
